# file-header

./: CHANGELOG.md  Cargo.toml  README.md
resources/test/example_check/: no_header.rs  with_header.rs
src/: lib.rs
src/license/: mod.rs
src/license/spdx/: mod.rs  tests.rs
tests/: tests.rs
