[package]
name = "file-header"
description = "Rust library to check for and add headers to files"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/google/file-header"
keywords = ["license", "header"]
categories = ["development-tools"]
rust-version = "1.65.0"
documentation = "https://docs.rs/crate/file-header"

[dependencies]
thiserror = "1.0.44"
crossbeam = "0.8.2"
walkdir = "2.3.3"
lazy_static = { version = "1.4.0", optional = true }
license = { version = "3.1.1", optional = true}

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]

[dev-dependencies]
tempfile = "3.7.0"
globset = "0.4.11"

[features]
default = ["spdx", "license-offline"]
license-offline = ["license/offline"]
spdx = ["license", "dep:lazy_static"]
