[package]
name = "file-header"
description = "Rust library to check for and add headers to files"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/google/file-header"
keywords = ["license", "header"]
categories = ["development-tools"]
rust-version = "1.65.0"
documentation = "https://docs.rs/crate/file-header"

[dependencies]
crossbeam = "0.8.2"
lazy_static = { version = "1.4.0", optional = true }
license = { version = "3.1.1", optional = true }
thiserror = "1.0.44"
walkdir = "2.3.3"

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]

[dev-dependencies]
globset = "0.4.11"
tempfile = "3.7.0"

[features]
default = ["spdx", "license-offline"]
license-offline = ["license?/offline"]
spdx = ["dep:license", "dep:lazy_static"]
