[package]
name = "file-header"
description = "Rust library to check for and add headers to files"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/google/file-header"
keywords = ["license", "header"]
categories = ["development-tools"]
rust-version = "1.65.0"
documentation = "https://docs.rs/crate/file-header"

[dependencies]
thiserror = "1.0.64"
crossbeam = "0.8.4"
walkdir = "2.5.0"
lazy_static = { version = "1.5.0", optional = true }
# 3.5.1 would require 1.81 for core::error::Error, but we only require 1.65.0
license = { version = "=3.5.0", optional = true }

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]

[dev-dependencies]
tempfile = "3.13.0"

[features]
default = ["spdx", "license-offline"]
license-offline = ["license?/offline"]
spdx = ["dep:license", "dep:lazy_static"]
